--- a/rock-paper-scissors/rock-paper-scissors.html
+++ b/rock-paper-scissors/rock-paper-scissors.html
@@ -2,7 +2,7 @@
 
 <html>
   <head>
-    <title class="tab-title">Rock Paper Scissor</title>
+    <title>Rock Paper Scissor</title>
     <link rel="stylesheet" href="style/rock-paper-scissors.css">
   </head>
 
