--- a/tic-tac-toe/tic-tac-toe.html
+++ b/tic-tac-toe/tic-tac-toe.html
@@ -8,41 +8,41 @@
   <body>
     <div class="grid">
       <!-- first column -->
-      <div class="column filled">
+      <div class="column">
+        <div class="row">
+          0
+        </div>
         <div class="row">
           1
         </div>
         <div class="row">
           2
         </div>
-        <div class="row">
-          3
-        </div>
       </div>
 
       <!-- second column -->
       <div class="column">
+        <div class="row">
+          3
+        </div>
         <div class="row">
           4
         </div>
         <div class="row">
           5
         </div>
-        <div class="row">
-          6
-        </div>
       </div>
 
       <!-- third column -->
       <div class="column">
         <div class="row">
+          6
+        </div>
+        <div class="row">
           7
         </div>
         <div class="row">
           8
-        </div>
-        <div class="row">
-          9
         </div>
       </div>
     </div>
