--- a/tic-tac-toe/tic-tac-toe.html
+++ b/tic-tac-toe/tic-tac-toe.html
@@ -1,51 +1,57 @@
 <!DOCTYPE html>
+<!-- credit: https://playtictactoe.org/ -->
 <html>
-  <head>
-    <title>tic tac toe</title>
-    <link rel="stylesheet" href="tic-tac-toe.css">
-  </head>
 
-  <body>
+<head>
+  <title>Tic Tac Toe</title>
+  <link rel="stylesheet" href="style/general.css">
+  <link rel="stylesheet" href="style/board.css">
+  <link rel="stylesheet" href="style/cross-circle-icon.css">
+  <link rel="stylesheet" href="style/score-info.css">
+</head>
+
+<body>
+  <div class="board-container">
     <div class="grid">
       <!-- first column -->
       <div class="column">
-        <div class="row">
-          0
-        </div>
-        <div class="row">
-          1
-        </div>
-        <div class="row">
-          2
-        </div>
+        <div class="row"></div>
+        <div class="row"></div>
+        <div class="row"></div>
       </div>
 
       <!-- second column -->
       <div class="column">
-        <div class="row">
-          3
-        </div>
-        <div class="row">
-          4
-        </div>
-        <div class="row">
-          5
-        </div>
+        <div class="row"></div>
+        <div class="row"></div>
+        <div class="row"></div>
       </div>
 
       <!-- third column -->
       <div class="column">
-        <div class="row">
-          6
-        </div>
-        <div class="row">
-          7
-        </div>
-        <div class="row">
-          8
-        </div>
+        <div class="row"></div>
+        <div class="row"></div>
+        <div class="row"></div>
       </div>
     </div>
-    <script src="tic-tac-toe.js"></script>
-  </body>
+    <div class="board-background"></div>
+    <div id='reset' class="reset"></div>
+  </div>
+  <div class="info">
+    <div class="x-container">
+      <div class="x-title">PLAYER - X</div>
+      <div class="x-score">0</div>
+    </div>
+    <div class="tie-container">
+      <div class="tie-title">TIE</div>
+      <div class="tie-score">0</div>
+    </div>
+    <div class="o-container">
+      <div class="o-title">PLAYER - O</div>
+      <div class="o-score">0</div>
+    </div>
+  </div>
+  <script src="tic-tac-toe.js"></script>
+</body>
+
 </html>
